istio/gw-http.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gw-http
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - "*.pamtecnologia.com.br"
    port:
      name: http
      number: 80
      protocol: HTTP
