istio/vs-sitea.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: request-logger
  namespace: pamtecnologia-dev
spec:
  gateways:
  - istio-ingress/gw-https
  hosts:
  - request-logger.pamtecnologia.com.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: request-logger
        port:
          number: 8080
